--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@react-three/drei": "^9.83.3",
+    "@react-three/fiber": "^8.14.1",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "three": "^0.156.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
