--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "@popperjs/core": "^2.11.8",
     "@react-three/drei": "^9.83.3",
     "@react-three/fiber": "^8.14.1",
+    "install": "^0.13.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-simple-maps": "^3.0.0",
-    "three": "^0.156.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "react-tsparticles": "^2.12.2",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.156.1",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
